<resources>
    <string name="app_name">GoToEat</string>
    <string name="app_main_title">GoToEat</string>
    <string name="friends_title">Venner</string>
    <string name="name_friends">Venner</string>
    <string name="telefone_friends">Telefon</string>
    <string name="add_friends">Legg til venner</string>
    <string name="edit_friends">Endringer for venner</string>
    <string name="friend_order">Venner</string>
    <string name="resturant_order">Restaurant</string>
    <string name="time_order">Tid</string>
    <string name="date_order_title">Velg Dato</string>
    <string name="hint_order">01/01/01</string>
    <string name="title_resturant">Restaurant</string>
    <string name="name_resturant">Navn</string>
    <string name="adress_resturant">Adresse</string>
    <string name="add_title_resturant">Legg til Restaurant</string>
    <string name="hint_name_resturant">Navn</string>
    <string name="hint_tlf_resturant">Telefon</string>
    <string name="hint_adress_resturant">Adresse</string>
    <string name="hint_type_resturant">Type</string>
    <string name="order_title">Bestillinger</string>
    <string name="settings_title">Innstillinger</string>
    <string name="settings_set_time">Sett Tid</string>
    <string name="settings_notifi_on">Notifikasjon PÅ</string>
    <string name="settings_notifi_off">Notifikasjon AV</string>
    <string name="settings_sms_on">SMS PÅ</string>
    <string name="settings_sms_off">SMS AV</string>
    <string name="resturant_edit_title">Endringer i Restaurant</string>























    venn , resturant, tid







</resources>
