<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/settingsbackground">


    <TextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/settings_title"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/time_Choosen_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="20:15"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/setTime"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_set_time"
        android:background="@drawable/button_style"
        />

    <Button
        android:id="@+id/notification_on"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_notifi_on"
        android:background="@drawable/button_style"
        />

    <Button
        android:id="@+id/notification_off"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_notifi_off"
        android:background="@drawable/button_style"
        />

    <Button
        android:id="@+id/sms_on"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_sms_on"
        android:background="@drawable/button_style"

        />

    <Button
        android:id="@+id/sms_off"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_sms_off"
        android:background="@drawable/button_style"
        />


    <Toolbar
        android:id="@+id/mintoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80FFFFFF"
        android:alpha="0.9"
        android:layout_marginTop="20dp">

        <ImageButton
            android:id="@+id/friends_image_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/friendsicon"/>
        <ImageButton
            android:id="@+id/resturant_image_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/dinnericon"/>

        <ImageButton
            android:id="@+id/order_image_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/ordericon"/>

        <ImageButton
            android:id="@+id/settings_image_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/settingsicon"/>
    </Toolbar>

</LinearLayout>