<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dinner"
    >

  <TextView
      android:layout_marginTop="20dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/title_resturant"
      android:textSize="40sp"
      android:textStyle="bold"
      android:textColor="#FFFFFF"
      android:textAlignment="center"

      />


  <RelativeLayout
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <TextView
      android:layout_width="180dp"
      android:layout_marginTop="10dp"
      android:layout_marginStart="30dp"
      android:layout_height="30dp"
      android:text="@string/name_resturant"
      android:textStyle="bold"
      android:textSize="20sp"
      android:textColor="#FFFFFF"
      />

    <TextView
        android:layout_marginStart="220dp"
        android:layout_width="180dp"
        android:layout_marginTop="10dp"
        android:layout_height="30dp"
        android:text="@string/adress_resturant"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        />

</RelativeLayout>


  <ListView
      android:id="@+id/listView_resturante"
      android:layout_width="match_parent"
      android:layout_height="400dp"
      android:layout_marginTop="10dp"
      android:dividerHeight="10.0sp"
      />




</LinearLayout>