<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_friends"
        android:textSize="30sp"
        android:textAlignment="center"

        />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:hint="@string/hint_name_resturant" />



    <EditText
        android:id="@+id/editText_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number|phone"
        android:maxLines="1"
        android:hint="@string/hint_tlf_resturant" />



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        >

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:id="@+id/edit_image_button"
            android:background="@drawable/editimage"
            android:alpha="0.8"
            />

        <ImageButton
            android:id="@+id/remove_image_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="170dp"
            android:background="@drawable/remove"
             />









    </RelativeLayout>


</LinearLayout>